# directfb2-ge

./: README.md  ge_2d.c  ge_gfxdriver.c  ge_gfxdriver.h  meson.build
